--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo1.png" alt="Logo" style="height: 70px;" />
+                <img src="logo1.png" alt="Logo" style="height: 70px;" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
