--- a/contect.html
+++ b/contect.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo1.png" alt="Logo" style="height: 70px;" />
+                <img src="logo1.png" alt="Logo" style="height: 70px;" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -132,7 +132,7 @@
 
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/logo1.png" alt="Logo" />
+                    <img src="logo1.png" alt="Logo" />
                     <p>Effortlessly innovate cross-platform fashion experiences. Elegantly craft dynamic infrastructures
                         to set new trends in the world of fashion.</p>
                     <div class="social-icons">
@@ -173,12 +173,12 @@
                 <div class="footer-instagram">
                     <h3>Instagram Post</h3>
                     <div class="instagram-images">
-                        <img src="assets/image1.avif" alt="Instagram Image" />
-                        <img src="assets/parfect.jpeg" alt="Instagram Image" />
-                        <img src="assets/disg1.webp" alt="Instagram Image" />
-                        <img src="assets/parfect1.jpeg" alt="Instagram Image" />
-                        <img src="assets/papular1.webp" alt="Instagram Image" />
-                        <img src="assets/image5.jpeg" alt="Instagram Image" />
+                        <img src="image1.avif" alt="Instagram Image" />
+                        <img src="parfect.jpeg" alt="Instagram Image" />
+                        <img src="disg1.webp" alt="Instagram Image" />
+                        <img src="parfect1.jpeg" alt="Instagram Image" />
+                        <img src="papular1.webp" alt="Instagram Image" />
+                        <img src="image5.jpeg" alt="Instagram Image" />
                     </div>
                 </div>
             </div>
